--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,5 +3,6 @@
     <string name="title_home">Home</string>
     <string name="title_dashboard">Dashboard</string>
     <string name="title_plus">Plus</string>
+    <string name="title_new_entry">New Entry</string>
     <string name="title_notifications">Notifications</string>
 </resources>
