Add slider and toggle button to filter drawer

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,4 +6,5 @@
     <string name="my_image_description">My Image</string>
     <string name="secondary_text">Distance</string>
     <string name="toggle_drawer">Toggle Drawer</string>
+    <string name="distance_german">Entfernung</string>
 </resources>
