--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -9,4 +9,5 @@
     <string name="secondary_text">Distance</string>
     <string name="toggle_drawer">Toggle Drawer</string>
     <string name="distance_german">Entfernung</string>
+    <string name="primarytext">Dish name</string>
 </resources>
