--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -9,4 +9,7 @@
     <string name="secondary_text">Distance</string>
     <string name="toggle_drawer">Toggle Drawer</string>
     <string name="distance_german">Entfernung</string>
+    <string name="meal_name_hint">Name des Gerichtes</string>
+    <string name="meal_description_hint">Beschreibung</string>
+
 </resources>
