--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -10,4 +10,5 @@
     <string name="toggle_drawer">Toggle Drawer</string>
     <string name="distance_german">Entfernung</string>
     <string name="primarytext">Dish name</string>
+    <string name="refresh_error">Refreshing Failed!</string>
 </resources>
