--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,6 +3,7 @@
     <string name="title_home">Home</string>
     <string name="title_dashboard">Dashboard</string>
     <string name="title_chat">Chat</string>
+    <string name="title_login">Login</string>
     <string name="title_new_entry">New Entry</string>
     <string name="title_notifications">Notifications</string>
     <string name="my_image_description">My Image</string>
